# OpenGL-With-CMake

./: .gitignore  CMakeLists.txt  Dependency.cmake  GNU_DirectoryStructure.sh  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Dependency.cmake
include/: buffer.cpp  common.cpp  context.cpp  context.h  program.cpp  program.h
include/common/: common.h
include/shader/: shader.cpp  shader.h
shader/: per_vertex_color.fs  per_vertex_color.vs  simple.fs  simple.vs  texture.fs
shell/: CMakeConfigure.sh  CMakeDependency.sh  CMakeExecute.sh  CMakeInstall.sh  cmake_N_build.sh
src/: CMakeLists.txt  buffer.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  texture.cpp  texture.h  vertex_layout.h
src/VertexLayout/: vertex_layout.cpp
src/common/: common.cpp  common.h
src/image/: image.cpp
src/shader/: shader.cpp  shader.h  simple.fs
